# light-effects

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/Setup/: StreamSetup.cpp  StreamSetup.hpp
